tests/machine/x/ocaml/string_in_operator.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenstring_in_operator1439576716/001/string_in_operator.ml", line 23, characters 32-33:
23 |   print_endline (List.mem "cat" s);
                                     ^
Error: This expression has type string but an expression was expected of type
         string list
